pod.assignment-ssl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pltsci-assignment-ssl
spec:
  containers:
    - name: app
      image: nyyakko/pltsci-assignment:latest
      ports:
        - name: http
          containerPort: 8080
    - name: envoy
      image: nyyakko/pltsci-assignment-ssl-proxy:latest
      ports:
        - name: https
          containerPort: 8443
        - name: admin
          containerPort: 9901
