pod.echo.cm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo
spec:
  restartPolicy: OnFailure
  containers:
    - name: echo
      image: busybox
      command:
        - sh
        - -c
        - echo "$HELLO, $WORLD from $POD_NAME@$NODE_NAME"
