pod.echo.label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo-label
  namespace: labelled
  labels:
    app: demo
spec:
  restartPolicy: OnFailure
  containers:
    - name: echo
      image: busybox
      command:
        - sh
        - -c
        - |
          echo "[$NAMESPACE::$APP_NAME::$POD_NAME]: Hello, world!"
          sleep 9999
