pod.grok.svc.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: gok
  generateName: grok-
  labels:
    app: grok
spec:
  volumes:
    - name: grok-db
      emptyDir: {}
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - name: http
          containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html/grok
          name: grok-db
          readOnly: true
    - name: answer-generator
      image: busybox
      volumeMounts:
        - mountPath: /grok
          name: grok-db
      command:
        - sh
        - -c
        - |
          [...]
