pod.grok.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grok
spec:
  volumes:
    - name: grok-db
      emptyDir: {}
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /usr/share/nginx/html/grok
          name: grok-db
          readOnly: true
    - name: answer-generator
      image: busybox
      volumeMounts:
        - mountPath: /grok
          name: grok-db
      command:
        - sh
        - -c
        - |
          while :
          do
              STATE=$(((RANDOM % $((2 - 0))) + 0))

              if [[ $STATE -eq "1" ]]; then
                  echo "yes" > /grok/answer
              elif [[ $STATE -eq "0" ]]; then
                  echo "no" > /grok/answer
              fi
              sleep 1
          done
