pod.hoover.cm.volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hoover-cm-volume
spec:
  volumes:
    - name: envoy-config
      configMap:
        name: hoover-envoy-config
        items:
          - key: envoy.yaml
            path: envoy.yaml
    - name: envoy-certs
      secret:
        secretName: hoover-envoy-secrets
        items:
          - key: tls.crt
            path: example-com.crt
          - key: tls.key
            path: example-com.key
  containers:
    - name: app
      image: nyyakko/pltsci-assignment:latest
      ports:
        - name: http
          containerPort: 8080
      startupProbe:
        httpGet:
          path: /v1/health
          port: http
        periodSeconds: 5
        failureThreshold: 2
      livenessProbe:
        httpGet:
          path: /v1/health
          port: http
        initialDelaySeconds: 10
        periodSeconds: 5
        timeoutSeconds: 2
        failureThreshold: 3
    - name: envoy
      image: envoyproxy/envoy:v1.31-latest
      volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
        - name: envoy-certs
          mountPath: /etc/certs
      ports:
        - name: https
          containerPort: 8443
        - name: admin
          containerPort: 9901
      livenessProbe:
        httpGet:
          path: /ready
          port: admin
        initialDelaySeconds: 10
        periodSeconds: 5
        timeoutSeconds: 2
        failureThreshold: 3
