pod.hoover.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hoover
spec:
  containers:
    - name: app
      image: nyyakko/pltsci-assignment:latest
      ports:
        - name: http
          containerPort: 8080
      startupProbe:
        httpGet:
          path: /v1/health
          port: http
        periodSeconds: 5
        failureThreshold: 2
      livenessProbe:
        httpGet:
          path: /v1/health
          port: http
        initialDelaySeconds: 10
        periodSeconds: 5
        timeoutSeconds: 2
        failureThreshold: 3
    - name: envoy
      image: nyyakko/pltsci-assignment-ssl-proxy:latest
      ports:
        - name: https
          containerPort: 8443
        - name: admin
          containerPort: 9901
      livenessProbe:
        httpGet:
          path: /ready
          port: admin
        initialDelaySeconds: 10
        periodSeconds: 5
        timeoutSeconds: 2
        failureThreshold: 3
