pod.quiz.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quiz
spec:
  volumes:
    - name: quiz-data
      emptyDir: {}
    - name: initdb
      emptyDir: {}
  containers:
    - name: quiz
      image: luksa/quiz-api:0.1
      ports:
        - containerPort: 8080
    - name: mongo
      image: mongo
      volumeMounts:
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d/
          readOnly: true
        - name: quiz-data
          mountPath: /data/db
