svc.grok.exposed.loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: grok-service-exposed-loadbalancer
  namespace: gok
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: grok
