svc.grok.yaml
apiVersion: v1
kind: Service
metadata:
  name: grok-service
  namespace: gok
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: grok
