svc.weather.external.cname.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-weather-external-cname
spec:
  type: ExternalName
  externalName: api.open-meteo.com
